# loonaro-kvm

./: .gitignore  .gitmodules  README.md
app/: .gitignore  Cargo.toml  build.rs
app/headers/: wrapper.h
app/src/: cli.rs  disasm.rs  error.rs  ffi.rs  hook.rs  lib.rs  main.rs  session.rs  vmi.rs
app/src/commands/: list_processes.rs  mod.rs  monitor.rs
app/src/os/: mod.rs  windows.rs
app/src/os/windows/: mod.rs
app/src/os/windows/actions/: list_processes.rs  mod.rs
app/src/os/windows/events/: mod.rs  process_create.rs
loonaro/: README.md
loonaro/scripts/: setup.sh  start.sh  teardown.sh
loonaro/templates/: win11.xml
