[package]
name = "loonaro-vmi"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "2"
libc = "0.2"
anyhow = "1.0.100"
ctrlc = "3.5.1"
iced-x86 = "1.21.0"

[build-dependencies]
bindgen = "0.72.1"
pkg-config = "0.3"

[[bin]]
name = "loonaro"
path = "src/main.rs"

[profile.release]
opt-level = "z"      # optimize for size
lto = true           # link-time optimization
codegen-units = 1    # single codegen unit for better optimization
panic = "abort"      # abort on panic (smaller binary)
strip = true         # strip symbols
